# project-05_HaDucHuyK24

./: .gitignore  Data_dict.md  README.md
project-05/: pyproject.toml
project-05/src/project_05/: collect_product_info.py  config.py  main.py  process_ip_loc.py  scrape_product_name.py  utils.py
