[project]
name = "project-05"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)",
    "ip2location (>=8.11.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "project_05", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
